# data-science-job-dashboard

./: .gitignore  CLAUDE.md  PRD.md  README.md  START_HERE.md  TODO.md  pyproject.toml  requirements.txt
.claude/.claude-plugin/: plugin.json
.claude/agents/: backend-developer.md  builder.md  cicd-engineer.md  database-expert.md  designer.md  documentation-writer.md  frontend-developer.md  infra.md  planner.md  project-manager.md  qa-engineer.md  quality.md  systems-architect.md  ui-ux-designer.md
.claude/commands/: orchestrate.md  start.md  sync-template.md
.claude/skills/backend/: SKILL.md
.claude/skills/cicd/: SKILL.md
.claude/skills/content/: SKILL.md
.claude/skills/database/: SKILL.md
.claude/skills/design/: SKILL.md
.claude/skills/docker/: SKILL.md
.claude/skills/docs/: SKILL.md
.claude/skills/frontend/: SKILL.md
.claude/skills/mobile/: SKILL.md
.claude/skills/planning/: SKILL.md
.claude/skills/quality/: SKILL.md
.claude/templates/: CLAUDE.md
.github/: PULL_REQUEST_TEMPLATE.md
.tasks/: 001-skills-taxonomy.md  002-itviec-scraper.md  003-topcv-scraper.md
docs/technical/: ARCHITECTURE.md
src/data/: skills_taxonomy.py
src/scrapers/: itviec.py  topcv.py
tests/: test_scraper.py  test_taxonomy.py
